--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "import/no-extraneous-dependencies": 0,
+    "no-console": 0,
+    "no-underscore-dangle": 0,
+    "no-restricted-globals": 0,
+    "linebreak-style": 0,
+    "eol-last": 0,
+    "max-len": 0,
+    "no-undef": 0,
+    "no-prototype-builtins": 0,
+    "consistent-return": 0
+  }
 }
